fixed pressAndHoldBtn and MenuBtn z-index position issue on mobile view

--- a/_sass/content_stage_bg-img.scss
+++ b/_sass/content_stage_bg-img.scss
@@ -8,7 +8,7 @@
     top: -75vh;
     bottom: 15vh;
     left: 37.5vw;
-    right: 40px;
+    right: 15vw;
     display: block;
     background-color: $col_background_highlight;
     overflow: hidden;
