--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -24,7 +24,7 @@ body{
 
 // contains ui_home and ui_menu
 .ui_head{
-    position: fixed;
+    position: absolute;
     width: 100%;
     height: auto;
     display: flex;
@@ -32,7 +32,7 @@ body{
     align-items: center;
     justify-content: space-between;
     margin-top: 30px;
-    z-index: 1;
+    z-index: 2;
 }
 
 .layout_ui_home{
